# BGSCET-CPrograms

./: AreaOfACircle.c  CMakeLists.txt  CharacterToASCII.c  HoursToSeconds.c  SimpleInterest.c  main.c
Arrays/: BubbleSort.c  CountSortAlgo.c  FindMaxMinInArray.c  Initialization.c  LinearSearch.c  MergeTwoArrays.c  Non-RepeatingElement.c  RotateMatrixClockwise90Degrees.c
Conditionals/: IfElse.c  IfElseIfElse.c  NestedIf.c  SimpleIf.c  SwitchCase.c  TernaryOperator.c
DMA/: DMA.c
Files/: ReadFile.c  WriteFile.c  bgs.txt  demo.txt
Functions/: HammingWeight.c  ReverseInteger.c  ZeroOnePattern.c
Loops/: DoWhile.c  For.c  HeartPattern.c  While.c  ZigZagPattern.c
Pointers/: ArrayPointers.c  DanglingPointer.c  Pointers.c  SwapTwoNumbers.c
Strings/: Palindrome.c  PrintFirstLetterOfEachWord.c  RemoveDuplicates.c  SwapTwoStrings.c
StructuresAndUnions/: FahrenheitToCelsius.c  OnlineStore.c  PointStruct.c  Structure.c  Union.c
