cmake_minimum_required(VERSION 3.23)
project(BGS_SEM5_ISE C)
set(CMAKE_C_STANDARD 23)
add_executable(BGS_SEM5_ISE main.c)
add_executable(BGS_SEM5_ISE_0 AreaOfACircle.c)
add_executable(BGS_SEM5_ISE_1 CharacterToASCII.c)
add_executable(BGS_SEM5_ISE_2 HoursToSeconds.c)
add_executable(BGS_SEM5_ISE_3 SimpleInterest.c)
add_executable(BGS_SEM5_ISE_4 Conditionals/SimpleIf.c)
add_executable(BGS_SEM5_ISE_5 Conditionals/IfElse.c)
add_executable(BGS_SEM5_ISE_6 Conditionals/IfElseIfElse.c)
add_executable(BGS_SEM5_ISE_7 Conditionals/NestedIf.c)
add_executable(BGS_SEM5_ISE_8 Conditionals/SwitchCase.c)
add_executable(BGS_SEM5_ISE_9 Conditionals/TernaryOperator.c)
add_executable(BGS_SEM5_ISE_10 Conditionals/Questions.c)
add_executable(BGS_SEM5_ISE_11 Loops/While.c)
add_executable(BGS_SEM5_ISE_12 Loops/DoWhile.c)
add_executable(BGS_SEM5_ISE_13 Loops/For.c)
add_executable(BGS_SEM5_ISE_14 Functions/HammingWeight.c)
add_executable(BGS_SEM5_ISE_15 Functions/ReverseInteger.c)
add_executable(BGS_SEM5_ISE_16 Functions/ZeroOnePattern.c)
add_executable(BGS_SEM5_ISE_17 Loops/HeartPattern.c)
add_executable(BGS_SEM5_ISE_18 Loops/ZigZagPattern.c)
add_executable(BGS_SEM5_ISE_19 Arrays/Initialization.c)
add_executable(BGS_SEM5_ISE_20 Arrays/FindMaxMinInArray.c)
add_executable(BGS_SEM5_ISE_21 Arrays/MergeTwoArrays.c)
add_executable(BGS_SEM5_ISE_22 Arrays/LinearSearch.c)
add_executable(BGS_SEM5_ISE_23 Arrays/BubbleSort.c)
add_executable(BGS_SEM5_ISE_24 Arrays/CountSortAlgo.c)
add_executable(BGS_SEM5_ISE_25 Arrays/RotateMatrixClockwise90Degrees.c)
add_executable(BGS_SEM5_ISE_26 Pointers/Pointers.c)
add_executable(BGS_SEM5_ISE_27 Pointers/DanglingPointer.c)
add_executable(BGS_SEM5_ISE_28 Pointers/SwapTwoNumbers.c)
add_executable(BGS_SEM5_ISE_29 Pointers/ArrayPointers.c)
add_executable(BGS_SEM5_ISE_30 Strings/SwapTwoStrings.c)
add_executable(BGS_SEM5_ISE_31 Strings/Palindrome.c)
add_executable(BGS_SEM5_ISE_32 Strings/RemoveDuplicates.c)
add_executable(BGS_SEM5_ISE_33 Strings/PrintFirstLetterOfEachWord.c)
add_executable(BGS_SEM5_ISE_34 Arrays/Non-RepeatingElement.c)
add_executable(BGS_SEM5_ISE_35 StructuresAndUnions/Structure.c)
add_executable(BGS_SEM5_ISE_36 StructuresAndUnions/Union.c)
add_executable(BGS_SEM5_ISE_37 StructuresAndUnions/OnlineStore.c)
add_executable(BGS_SEM5_ISE_38 StructuresAndUnions/FahrenheitToCelsius.c)
add_executable(BGS_SEM5_ISE_39 StructuresAndUnions/PointStruct.c)
add_executable(BGS_SEM5_ISE_40 Files/ReadFile.c)
add_executable(BGS_SEM5_ISE_41 Files/WriteFile.c)
add_executable(BGS_SEM5_ISE_42 DMA/DMA.c)
